--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   collection: 1.18.0
   flutter_animate: 4.5.0
   flutter_cache_manager: 3.4.1
+  flutter_spinkit: 5.2.0
   font_awesome_flutter: 10.7.0
   from_css_color: 2.0.0
   functions_client: 1.3.2
