--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   collection: 1.18.0
   flutter_animate: 4.5.0
   flutter_cache_manager: 3.4.1
+  flutter_native_splash: 2.4.1
   flutter_spinkit: 5.2.0
   font_awesome_flutter: 10.7.0
   from_css_color: 2.0.0
@@ -74,6 +75,7 @@ dependencies:
   supabase: 1.11.11
   supabase_flutter: 1.10.24
   timeago: 3.6.1
+  universal_io: 2.2.2
   url_launcher: 6.3.0
   url_launcher_android: 6.3.10
   url_launcher_ios: 6.3.1
@@ -86,6 +88,7 @@ dependencies:
   webview_flutter_android: 3.16.7
   webview_flutter_platform_interface: 2.10.0
   webview_flutter_wkwebview: 3.15.0
+  xml: 6.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
